--- a/Pages/AboutUs.razor
+++ b/Pages/AboutUs.razor
@@ -65,9 +65,9 @@
                 </div>
             </div>
         </div>
-        <div class="block padding">
-            <div class="wrapper">
-                <h2 class="center">HISTORY</h2>
+        <div class="block big_padding">
+            <div class="wrapper big_padding">
+                <h2 class="center heading">HISTORY</h2>
                 <p class="padding">
                     Nepalese Canadian Cricket Club (NCCC) is community based cricket club which was established in 2017 by a group of youth with mission to promote cricket in youth and community. NCCC is registered as not for profit community club.
                     <br />
