--- a/Pages/Board.razor
+++ b/Pages/Board.razor
@@ -17,18 +17,16 @@ else
     <section>
         <div class="wrapper center">
 
-            <h2 class="section_heading">Board and Executive Members <br /> 2019-2021</h2>
+            <h2 class="section_heading">Board and Executive Members: 2019-2021</h2>
 
         </div>
-        <br />
-        <br />
         <div class="wrapper gallery_container">
             @foreach (var member in boardMembers)
             {
                 <div class="board_profile_container">
                     <img src="/Static/Images/board/@member.BoardMemberModel[i].Image_file" class="responsive" alt="@member.BoardMemberModel[i].ID" />
                     <div class="member_information">
-                        <h2>@member.BoardMemberModel[i].Name</h2>
+                        <h2 class="padding">@member.BoardMemberModel[i].Name</h2>
                         <h3>@member.BoardMemberModel[i].Role</h3>
                         <p>@member.BoardMemberModel[i].Email</p>
                     </div>
