New page "NCCC Cup" is added. This page contains the photos of NCCC Cup events.

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -15,24 +15,35 @@
                 <li>
                     <a href="Membership">Membership</a>
                 </li>
+                <li>
+                    <div class="dropdown">
+                        <button class="drop_button" type="button">Team <span class="drop_icon fas fa-caret-up"></span></button>
+                        <div class="dropdown_content">
+                            <a href="Board">Board</a>
+                            <a href="Players">Players</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown">
+                        <button class="drop_button" type="button">Events <span class="drop_icon fas fa-caret-up"></span></button>
+                        <div class="dropdown_content">
+                            <a href="NcccCup">NCCC Cup</a>
+                        </div>
+                    </div>
+                </li>
                 @* --- Uncomment the below <li>...</li> block if a dropdown is needed --- *@
                 @*<li>
-                        <div class="dropdown">
-                            <button class="drop_button" type="button">TEAM <span class="drop_icon fas fa-caret-up"></span></button>
-                            <div class="dropdown_content">
-                                <a href="Players">PLAYER</a>
-                                <a href="PlayerProfile">Player Profile</a>
-                            </div>
-                        </div>
-                    </li>*@
+            <div class="dropdown">
+                <button class="drop_button" type="button">TEAM <span class="drop_icon fas fa-caret-up"></span></button>
+                <div class="dropdown_content">
+                    <a href="Players">PLAYER</a>
+                    <a href="PlayerProfile">Player Profile</a>
+                </div>
+            </div>
+        </li>*@
                 <li>
                     <a href="Sponsor">Sponsors</a>
-                </li>
-                <li>
-                    <a href="Players">Players</a>
-                </li>
-                <li>
-                    <a href="Board">Board</a>
                 </li>
                 <li>
                     <a href="AboutUs" id="contactLink">About Us</a>
