--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -22,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/StyleSheet.css" />
+    <link rel="stylesheet" type="text/css" href="css/tabs.css" />
 
 </head>
 <body>
@@ -46,6 +47,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="JS/Tilt.js"></script>
     <script src="JS/JavaScript.js"></script>
+    <script src="JS/tabs.js"></script>
 
     <script type="text/javascript" src="/JS/papaparse.min.js"></script>
 </body>
