--- a/wwwroot/css/StyleSheet.css
+++ b/wwwroot/css/StyleSheet.css
@@ -61,17 +61,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
+    box-shadow: inset 0 0 5px #dadada;
     border-radius: 10px;
 }
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(#2193b0, #6dd5ed);
+    background: #5c9cd4;
     border-radius: 10px;
 }
     /* Handle on hover */
     ::-webkit-scrollbar-thumb:hover {
-        background: #6dd5ed;
+        background: #325595;
     }
 
 /* -------------------------
@@ -85,13 +85,11 @@ h1, h2, h3, h4, h5, h6 {
 /* Navigation Bar */
 nav {
     position: fixed;
-    background: rgba(255,255,255,0.65);
+    background: rgba(255,255,255,0.95);
     top: 0;
     height: 90px;
     width: 100%;
     z-index: 1;
-    padding: 3px 0;
-    backdrop-filter: blur(10px);
 }
 
 .navbar {
@@ -169,7 +167,6 @@ nav {
     transition: 300ms ease-in-out;
     overflow: hidden;
     height: 0;
-    margin-top: 10px;
     white-space: nowrap;
     text-shadow: none;
 }
@@ -824,6 +821,33 @@ section {
     justify-items: normal;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
+.image_gallery_container {
+    grid-gap: 7px;
+    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+.image_gallery {
+    display: none;
+    opacity: 0;
+    cursor: pointer;
+}
+.gallery_image {
+    box-shadow: 0 0 2px rgba(0,0,0,0.3);
+    border-radius: 5px;
+    animation-name: showUp;
+    animation-fill-mode: both;
+    animation-duration: 1s;
+}
+.active_image_gallery{
+    display: block;
+    opacity: 1;
+}
+.gallery_container .gallery_image img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+    vertical-align: middle;
+}
 .gallery_container_small h3{
     font-weight: 900;
     padding: 10px 0;
@@ -848,6 +872,25 @@ section {
             transform: scale(1.2);
         }
 
+@keyframes showUp{
+    0%{
+        transform: scale(0.5);
+        margin-top: 30vh;
+    }
+    100%{
+        transform: scale(1);
+        margin-top: 0;
+    }
+}
+
+.popUp_Container{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
 
 .popUp {
     display: block;
@@ -868,6 +911,37 @@ section {
     animation-fill-mode: both;
     animation-duration: 1s;
     overflow: scroll;
+}
+.popUp_Image {
+    display: block;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    max-width: fit-content;
+    width: auto;
+    max-height: 85vh;
+    height: auto;
+    z-index: 50;
+    border-radius: 5px;
+    animation-name: PopUp;
+    animation-fill-mode: both;
+    animation-duration: 1s;
+    text-align: center;
+}
+.popUp_Image img{
+    max-height: inherit;
+}
+
+.popUp_Container .popUp_Overlay{
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0,0,0,0.8);
+    position: absolute;
+    top:0;
+    left:0;
 }
 
     .popUp .profile_info_container {
@@ -992,6 +1066,7 @@ section {
     font-weight: bold;
     cursor: pointer;
     transition: 300ms ease-in-out;
+    z-index: 50;
 }
 
     .close:hover, .close:focus {
