--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -19,6 +19,7 @@
                     <div class="dropdown">
                         <button class="drop_button" type="button">Team <span class="drop_icon fas fa-caret-up"></span></button>
                         <div class="dropdown_content">
+                            <a href="Advisor">Advisor</a>
                             <a href="Board">Board</a>
                             <a href="Players">Players</a>
                         </div>
