--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -15,43 +15,48 @@
 </header>
 <section>
     <div class="wrapper container">
-        <h2 class="container_header container_main_header">MAIN SPONSOR</h2>
+        <h2 class="sponsors_heading sub_heading" style="background: #e5e4e2;">Platinum Sponsors</h2>
         <div class="image_container">
-            <a href="https://everesthomes.ca/" target="_blank">
-                <img src="../Static/Images/sponsors/main-sponsor-2020.jpg" alt="EVEREST" />
-            </a>
+            <img src="/Static/Images/sponsors/ApprovalGenie.jpg" alt="Approval Genie" />
+        </div>
+        <div class="image_container">
+            <img src="/Static/Images/sponsors/wfg.jpg" alt="WFG" />
         </div>
     </div>
     <div class="wrapper container">
-        <h2 class="container_header">SECOND SPONSOR</h2>
+        <h2 class="sponsors_heading sub_heading" style="background: #b9f2ff;">Diamond Sponsors</h2>
         <div class="image_container">
-            <a href="https://ca.linkedin.com/in/atulsubedi" target="_blank">
-                <img src="../Static/Images/sponsors/second-sponsor-atul-1600x206-compressor.jpg" alt="ATUL SUBEDI" />
-            </a>
+            <img src="/Static/Images/sponsors/AtulSubedi.jpg" alt="Atul Subedi" />
+        </div>
+        <div class="image_container">
+            <img src="/Static/Images/sponsors/worldDriveDentistry.jpg" alt="World Drive Dentistry" />
         </div>
     </div>
     <div class="wrapper container">
-        <h2 class="container_header">THIRD SPONSOR</h2>
+        <h2 class="sponsors_heading sub_heading" style="background: #ffd700;">Gold Sponsors</h2>
         <div class="image_container">
-            <a href="https://worlddrivedentistry.com/" target="_blank">
-                <img src="../Static/Images/sponsors/third-sponsor-compressor.jpg" alt="WORLD DRIVE DENTISTRY" />
-            </a>
+            <img src="/Static/Images/sponsors/BreakAndPlay.jpg" alt="Break And Play" />
+        </div>
+        <div class="image_container">
+            <img src="/Static/Images/sponsors/AkalOptical.jpg" alt="Akal Optical" />
         </div>
     </div>
     <div class="wrapper container">
-        <h2 class="container_header">FORTH SPONSOR</h2>
+        <h2 class="sponsors_heading sub_heading" style="background: #c0c0c0;">Silver Sponsors</h2>
         <div class="image_container">
-            <a href="#">
-                <img src="../Static/Images/sponsors/fourth-sponsor.jpg" alt="FORTH SPONSOR" />
-            </a>
+            <img src="/Static/Images/sponsors/SilverSponsor.jpg" alt="Silver Sponsor" />
         </div>
     </div>
     <div class="wrapper container">
-        <h2 class="container_header">FACILITY AND MEDIA PARTNER</h2>
+        <h2 class="sponsors_heading sub_heading" style="background: #cd7f32;">Bronze Sponsors</h2>
         <div class="image_container">
-            <a href="#">
-                <img src="../Static/Images/sponsors/facility-partner-compressor.jpg" alt="FACILITY AND MEDIA PARTNER" />
-            </a>
+            <img src="/Static/Images/sponsors/BronzeSponsor.jpg" alt="Bronze Sponsor" />
+        </div>
+    </div>
+    <div class="wrapper container">
+        <h2 class="sponsors_heading sub_heading" style="background: #4277eb;">Facility and Media Partners</h2>
+        <div class="image_container">
+            <img src="/Static/Images/sponsors/facility-partner.jpg" alt="Facility and media partners" />
         </div>
     </div>
     <div class="wrapper container center">
